--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             z-index: 1000;
         }
 
-        #modal > div {
+        #modal>div {
             background: white;
             margin: 5% auto;
             padding: 1rem;
@@ -105,7 +105,7 @@
             overflow-y: auto;
             border-radius: 8px;
             position: relative;
-            box-shadow: 0 0 10px rgba(0,0,0,0.5);
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
         }
 
         #closeModal {
@@ -142,7 +142,8 @@
         }
 
         /* Titres dans le résumé */
-        #modalContent h1, #modalContent h2 {
+        #modalContent h1,
+        #modalContent h2 {
             text-align: center;
             margin-top: 1rem;
         }
@@ -204,8 +205,8 @@
             </div>
         </div>
     </div>
-
-    <script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+<script>
         // Questions générales oui/non
         const questionsOuiNon = [
             "Le produit est-il en bon état et est-il complet (produit et accessoires) ?",
@@ -485,7 +486,7 @@
             printWindow.document.write(`
                 <html><head><title>Impression Rapport</title><meta charset="UTF-8" />
                 <style>body{font-family:Arial,sans-serif; max-width:600px; margin:auto; padding:1rem;}
-                img{max-width:100%; margin-top:0.5rem; border:1px solid #ccc; border-radius:5px;}
+                img{max-width:50vw; margin-top:0.5rem; border:1px solid #ccc; border-radius:5px;}
                 h1,h2{text-align:center;}</style>
                 </head><body>${html}
             `);
@@ -495,38 +496,79 @@
             printWindow.close();
         });
 
-        // Télécharger le résumé HTML
-        btnModalDownload.addEventListener('click', () => {
-            const html = modalContent.dataset.html || '';
-            const blob = new Blob([html], { type: 'text/html' });
-            const url = URL.createObjectURL(blob);
-            const a = document.createElement('a');
-            a.href = url;
-            a.download = 'rapport_controle.html';
-            a.click();
-            URL.revokeObjectURL(url);
-        });
+
+btnModalDownload.addEventListener('click', async () => {
+    try {
+        // S'assurer que toutes les images sont chargées avant export
+        const images = modalContent.querySelectorAll('img');
+        for (const img of images) {
+            if (!img.complete) {
+                await new Promise((resolve, reject) => {
+                    img.onload = resolve;
+                    img.onerror = reject;
+                });
+            }
+        }
+
+        // Génération directe depuis le contenu affiché (sans clone)
+        await html2pdf().set({
+            margin: 10,
+            filename: 'rapport_controle.pdf',
+            image: { type: 'jpeg', quality: 0.98 },
+            html2canvas: { scale: 2, useCORS: true },
+            jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait' }
+        }).from(modalContent).save();
+
+    } catch (e) {
+        alert("Erreur lors du téléchargement : " + (e.message || e));
+    }
+});
 
         // Partager via Web Share API
-        btnModalShare.addEventListener('click', async () => {
-            const html = modalContent.dataset.html || '';
-            const blob = new Blob([html], { type: 'text/html' });
-            const file = new File([blob], 'rapport_controle.html', { type: 'text/html' });
+        // btnModalShare.addEventListener('click', async () => {
+        //     const html = modalContent.dataset.html || '';
+        //     const blob = new Blob([html], { type: 'text/html' });
+        //     const file = new File([blob], 'rapport_controle.html', { type: 'text/html' });
 
-            try {
-                if (navigator.canShare && navigator.canShare({ files: [file] })) {
-                    await navigator.share({
-                        title: 'Rapport de contrôle',
-                        text: 'Voici le rapport de retour matériel médical.',
-                        files: [file]
-                    });
-                } else {
-                    alert("Le partage n’est pas supporté sur ce navigateur.");
-                }
-            } catch (err) {
-                alert("Échec du partage : " + err.message);
-            }
-        });
+        //     try {
+        //         if (navigator.canShare && navigator.canShare({ files: [file] })) {
+        //             await navigator.share({
+        //                 title: 'Rapport de contrôle',
+        //                 text: 'Voici le rapport de retour matériel médical.',
+        //                 files: [file]
+        //             });
+        //         } else {
+        //             alert("Le partage n’est pas supporté sur ce navigateur.");
+        //         }
+        //     } catch (err) {
+        //         alert("Échec du partage : " + err.message);
+        //     }
+        // });
+
+        btnModalShare.addEventListener('click', async () => {
+    try {
+        const canvas = await html2canvas(modalContent, { scale: 2, useCORS: true });
+        const blob = await new Promise(resolve => canvas.toBlob(resolve, 'image/png'));
+        const file = new File([blob], 'rapport.png', { type: 'image/png' });
+
+        if (navigator.canShare && navigator.canShare({ files: [file] })) {
+            await navigator.share({
+                title: 'Rapport visuel',
+                text: 'Voici le rapport de retour matériel médical.' + '\n' + modalContent,
+                files: [file]
+            });
+        } else {
+            // Fallback : téléchargement
+            const link = document.createElement('a');
+            link.href = URL.createObjectURL(blob);
+            link.download = 'rapport.png';
+            link.click();
+            URL.revokeObjectURL(link.href);
+        }
+    } catch (err) {
+        alert("Erreur lors du partage : " + err.message);
+    }
+});
 
         // Fermer modale au clic hors contenu
         window.addEventListener('click', (e) => {
